GraalVMで問題が出るのでXodusをやめてSQLiteにする